# rev

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  config.example.toml  docker-compose.yml
.hermes/plans/: 2026-06-13_integration-verification-and-tests.md  2026-06-13_wave2-key-data-protection.md  2026-06-13_wave3-wave4-infrastructure-tooling.md  2026-07-11_000000-anonymous-profiles.md  2026-07-12-komun-soft-launch.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs  tests.rs
crates/core/src/models/: community.rs  match_thread.rs  member.rs  mod.rs  post.rs  user.rs
crates/relay/: Cargo.toml
crates/relay/src/: auth.rs  config.rs  detect.rs  handler.rs  lib.rs  manager.rs  messages.rs  mqtt_bridge.rs  peer_relay.rs  push.rs  rate.rs  reticulum_bridge.rs  rnode.rs  room.rs  share.rs  share_http.rs  share_page.html  state.rs  storage.rs
crates/relay/src/handlers/: auth_handler.rs  community.rs  community_list.rs  dek.rs  layer.rs  member.rs  mesh.rs  mod.rs  push.rs  push_delta.rs  sync_request.rs  vote.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  main.rs  relay_bridge.rs  relay_ops.rs  repl.rs  security_headers.rs
crates/server/src/api/: admin.rs  alliances.rs  communities.rs  conversations.rs  directory.rs  endorsements.rs  geocode.rs  health.rs  link_preview.rs  mod.rs  node.rs  notifications.rs  posts.rs  reports.rs  search.rs  users.rs
crates/server/src/auth/: mod.rs
crates/server/src/db/: alliances.rs  communities.rs  conversations.rs  endorsements.rs  mod.rs  notifications.rs  posts.rs  reports.rs  users.rs
crates/server/src/db/alliances/: mod.rs
crates/server/src/federation/: mod.rs
crates/server/src/tasks/: bundle_cleanup.rs  expiry.rs  health.rs  mod.rs  registration.rs
crates/server/src/tests/: mod.rs
crates/server/tests/: auth_security_contract.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
data/relay/: community_data.json.bak
deploy/: komun.initd  nginx-komun.conf  seed.sql  setup.sh
docker/: Dockerfile
docs/: ARCHITECTURE.md  CONVENTIONS.md  CRYPTO.md  DATABASE.md  DEVELOPMENT.md
migrations/: 001_initial.sql  001_schema.sql  002_map_columns.sql  002_users.sql  003_community_locations.sql  003_directory.sql  004_encryption_keys.sql  004_recovery_code.sql  005_foreign_key_constraints.sql  006_check_constraints.sql  007_missing_indexes.sql  008_fix_member_roles.sql  009_user_cleanup.sql  010_post_reports.sql  011_user_profiles.sql  012_endorsements.sql  013_post_images.sql  014_post_fts.sql  015_community_images.sql
scripts/: audit.sh  sync-server-repo.sh
web/: package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
web/src/: app.css  app.html  hooks.server.ts  service-worker.ts
web/src/lib/: crypto.ts  themes.ts
web/src/lib/api/: client.ts  discovery.ts
web/src/lib/components/: AidCard.svelte  LinkPreview.svelte  LocationBar.svelte  Onboarding.svelte  RespondModal.svelte  SearchBar.svelte  ThemePicker.svelte
web/src/lib/design/: tokens.css
web/src/lib/stores/: auth.ts  directories.ts  location.ts  server.ts  theme.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/account/: +page.svelte
web/src/routes/admin/: +page.svelte
web/src/routes/aid/: +page.svelte
web/src/routes/community/: +page.svelte
web/src/routes/connect/: +page.svelte
web/src/routes/federation/: +page.svelte
web/src/routes/messages/: +page.svelte
web/src/routes/notifications/: +page.svelte
web/src/routes/search/: +page.svelte  +page.ts
web/src/tests/: AidCard.test.ts  auth.test.ts  crypto.test.ts  setup.ts
web/src/tests/__mocks__/: komun-wasm.ts
web/static/: manifest.json
web/static/fonts/: Atkinson-Hyperlegible.css  DM-Sans.css  Fraunces.css  Inter.css  JetBrains-Mono.css  Playfair-Display.css  Source-Serif-4.css  Space-Grotesk.css
(+13 files in other folders)
