[package]
name = "komun-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
komun-core = { path = "../core" }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { workspace = true }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "compression-gzip"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
dotenvy = "0.15"
anyhow = "1"
rand = "0.8"
jsonwebtoken = "9"
base64 = "0.22"
ed25519-dalek = "2"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
komun-relay = { path = "../relay", default-features = false }
dashmap = "6"
futures-util = "0.3"
socket2 = "0.5"
